Rework about and contact pages content.

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Découvrez Yoann de CY Coaching : titulaire de deux Licences STAPS à Toulouse et coach sportif passionné spécialisé en prise de masse, remise en forme, boxe pieds/poings et self-défense féminine. Engagez-vous dans un parcours personnalisé vers le bien-être et la performance.">
+
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -28,7 +30,7 @@
         <div id="header-container">
             <a href="/">
                 <div id="logo">
-                    <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+                    <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
                 </div>
             </a>
             <div class="menu-mobile-wrapper">
@@ -64,25 +66,35 @@
 
     <div class="content">
         <section>
-            <h2 id="first-h2">À propos de moi</h2>
+            <h2 id="first-h2">À propos de Yoann - Votre Coach Sportif à Toulouse</h2>
             <div class="about-content">
               <div class="column-image">
                 <div class="image">
-                  <img src="../static/assets/img/a-propos.jpg" alt="Photo du coach CY Coaching">
+                  <img src="../static/assets/img/a-propos.jpg" alt="Photo du coach sportif CY Coaching">
                 </div>
               </div>
               <div class="column-text">
                 <div class="text">
-                  <p>Je suis titulaire de deux Licences STAPS : Entrainement Sportif et Métiers de la Forme obtenues à Toulouse.</p>
+                  <p>Je suis titulaire de deux Licences STAPS : Entrainement Sportif et Métiers de la Forme obtenues à Toulouse.
+                  <br>Ma formation académique, complétée par de nombreuses expériences pratiques, m'a doté d'une solide expertise dans le domaine du coaching sportif.</p>
+
                   <p class="bold">J'ai toujours eu à cœur d'aider les autres à atteindre leurs objectifs de bien-être ou de performance.
                   C'est la raison pour laquelle j'ai choisi ce métier qui me passionne.</p>
-                  <p class="elegant-list-first-p">Je suis à même de t'encadrer sur différents objectifs :</p>
+                  <h3>Mes spécialités</h3>
+                  <p class="elegant-list-first-p">Je suis à même de vous encadrer sur différents objectifs :</p>
                   <ul class="elegant-list">
-                      <li>Prise de masse musculaire</li>
-                      <li>Remise en forme et tonification</li>
-                      <li>Apprentissage technique en boxe pieds/poings</li>
-                      <li>Self défense Féminine</li>
+                      <li><span class="bold">Prise de masse musculaire</span> : conception de programmes personnalisés pour stimuler l'hypertrophie dans le respect de votre santé et de votre intégrité physique,</li>
+                      <li><span class="bold">Remise en forme et tonification</span> : utilisation de techniques variées pour sculpter votre corps et améliorer votre condition physique générale,</li>
+                      <li><span class="bold">Apprentissage technique en boxe pieds/poings</span> : enseignement des fondamentaux et des techniques avancées pour tous les niveaux, dans une ambiance dynamique et sécuritaire,</li>
+                      <li><span class="bold">Self défense Féminine</span> : cours dédiés aux femmes souhaitant apprendre à se défendre, tout en gagnant en confiance et en force.</li>
                   </ul>
+                  <br>
+                  <p>Au-delà de ces spécialités, je m'engage à créer un environnement motivant et bienveillant, où le respect et l'écoute sont primordiaux. Chaque séance est une opportunité d'apprendre et de grandir ensemble, en s'adaptant constamment à vos besoins et à vos retours.</p>
+
+                  <h3>Pourquoi choisir CY Coaching ?</h3>
+                  <p>Opter pour CY Coaching, c'est choisir un partenaire dédié à votre succès. Avec moi, vous bénéficierez d'un accompagnement professionnel, empathique, et adapté à vos besoins spécifiques. Que vous soyez débutant ou sportif confirmé, mon objectif est de vous fournir les outils, les connaissances, et le soutien nécessaires pour vous permettre de vivre une expérience sportive enrichissante et transformative.
+                  <br>  
+                  Je vous invite à <a href="/contact">me contacter</a> pour discuter de vos objectifs et voir comment nous pouvons travailler ensemble pour les réaliser. Votre parcours vers une meilleure version de vous-même commence aujourd'hui.</p>
                 </div>
               </div>
             </div>
@@ -100,7 +112,7 @@
           </div>
           <div class="footer-logo">
             <a href="/">
-              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+              <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </a>
           </div>
           <div class="footer-social">
