--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Prêt à transformer votre pratique sportive à Toulouse ? Contactez CY Coaching
+    pour un coaching sportif à domicile ou en salle, personnalisé et ludique. Appelez-moi au 0608703251, envoyez un
+    email à yoann.cycoaching@gmail.com, ou remplissez le formulaire de contact pour une réponse rapide. Commencez votre
+    parcours vers le succès dès aujourd'hui !"/>
+
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -28,7 +33,7 @@
       <div id="header-container">
         <a href="/">
             <div id="logo">
-                <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+                <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </div>
         </a>
         <div class="menu-mobile-wrapper">
@@ -65,9 +70,10 @@
     <div class="content">
       <section class="text-contact" id="first-text">
         <div class="text">
-          <p>Je suis disponible pour du coaching à domicile ou en salle.</p>
-          <p>Si tu souhaites progresser et t'épanouir dans une pratique sportive ludique et personnalisée, contacte moi ! </br>
-          Tu peux me contacter au <span class="bold">0608703251</span> ou en remplissant le formulaire de contact, je m'engage à te répondre dans les plus bref délais.</p>
+          <p>Je suis disponible pour du coaching à domicile ou en salle à Toulouse et ses alentours.</p>
+          <p>Si vous souhaitez progresser et vous épanouir dans une pratique sportive ludique et personnalisée, contactez moi ! </br>
+          Vous pouvez me contacter au <span class="bold">0608703251</span>, par mail à l'adresse <span class="bold">yoann.cycoaching@gmail.com</span>
+          <br>ou en remplissant le formulaire de contact, je m'engage à vous répondre dans les plus bref délais.</p>
           <p>À bientôt !</p>
         </div>
       </section>
@@ -76,7 +82,7 @@
           <div class="contact-content">
             <div class="column-image">
               <div class="image">
-                <img src="../static/assets/img/contact.jpg" alt="Photo du coach CY Coaching pendant une séance coaching">
+                <img src="../static/assets/img/contact.jpg" alt="CY Coaching, coach sportif, expliquant les exerccies pendant une séance de coaching personnalisé à Toulouse">
               </div>
             </div>
             <div class="column-form">
@@ -122,7 +128,7 @@
           </div>
           <div class="footer-logo">
             <a href="/">
-              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+              <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </a>
           </div>
           <div class="footer-social">
