Rework pricing page.

--- a/tarif/index.html
+++ b/tarif/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Découvrez nos plans de coaching sportif flexibles à Toulouse, adaptés à tous les budgets et objectifs. Que vous visiez la prise de masse, la tonification, ou l'apprentissage de la boxe, CY Coaching offre des options personnalisées pour vous. Consultez nos tarifs et commencez votre transformation aujourd'hui !">
+
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -28,7 +30,7 @@
       <div id="header-container">
         <a href="/">
             <div id="logo">
-                <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+                <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </div>
         </a>
         <div class="menu-mobile-wrapper">
@@ -63,9 +65,10 @@
     </header>
 
       <section>
+          <h2>Tarifs de Coaching Sportif à Toulouse - CY Coaching</h2>
           <div class="row"  id="first-row">
             <div class="image-tarif-web column">
-              <img src="../static/assets/img/coaching-individuel.jpg" alt="Séance de coaching individuel">
+              <img src="../static/assets/img/coaching-individuel.jpg" alt="Séance de coaching individuel où le coach montre comment exécuter les exercices">
             </div>
             <div class="column">
             <div class="card">
@@ -85,7 +88,7 @@
 
       <section>
         <div class="image-tarif-mobile column">
-          <img src="../static/assets/img/tarif-1-mobile.jpg" alt="Séance de coaching individuel">
+          <img src="../static/assets/img/tarif-1-mobile.jpg" alt="Séance de coaching individuel où le coach montre comment exécuter les exercices">
         </div>
       </section>
 
@@ -106,20 +109,20 @@
             </div>
           </div>
           <div class="image-tarif-web column">
-              <img src="../static/assets/img/coaching-groupe.jpg" alt="Séance de coaching en groupe">
+              <img src="../static/assets/img/coaching-groupe.jpg" alt="Séance de coaching en groupe où le coach montre comment exécuter les exercices">
           </div>
         </div>
       </section>
 
       <section>
         <div class="image-tarif-mobile column">
-          <img src="../static/assets/img/tarif-2-mobile.jpg" alt="Séance de coaching individuel">
+          <img src="../static/assets/img/tarif-2-mobile.jpg" alt="Séance de coaching individuel où le coach montre comment exécuter les exercices">
         </div>
 
       <section>
         <div class="row">
           <div class="image-tarif-web column">
-            <img src="../static/assets/img/programme.jpg" alt="Séance de coaching en groupe">
+            <img src="../static/assets/img/programme.jpg" alt="Séance de coaching en groupe où le coach montre comment exécuter les exercices">
           </div>
           <div class="column">
             <p>Je propose aussi deux offres de programmes à distance, basique ou personnaliśe. </br> Chaque offre comprend un programme sur 8 semaines. </p>
@@ -152,7 +155,7 @@
           </div>
           <div class="footer-logo">
             <a href="/">
-              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+              <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </a>
           </div>
           <div class="footer-social">
