Rework boxing page.

--- a/boxe/index.html
+++ b/boxe/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez des cours d'initiation à la boxe et de self-défense féminine à Toulouse avec CY Coaching. Que vous souhaitiez apprendre les bases de la boxe ou acquérir des compétences en self-défense pour plus de confiance et de sécurité, mes programmes sont conçus pour tous les niveaux. Rejoignez-moi pour devenir plus fort, en sécurité et en confiance.">
+
     <link rel="icon" href="../static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/assets/css/common-style.css"/>
     <link rel="stylesheet" href="../static/assets/css/common-header.css"/>
@@ -29,7 +31,7 @@
       <div id="header-container">
         <a href="/">
             <div id="logo">
-                <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+                <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </div>
         </a>
         <div class="menu-mobile-wrapper">
@@ -65,12 +67,12 @@
 
     <div class="content">
         <section>
-            <h2 id="first-h2">Découvrir la boxe</h2>
+            <h2 id="first-h2">Initiation à la Boxe : Maîtrisez les Fondamentaux</h2>
             <div class="container-boxe">
                 <div class="left-column-boxe">
-                  <img id="column-image-boxe-web" src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe">
+                  <img id="column-image-boxe-web" src="../static/assets/img/boxe-groupe.jpg" alt="Cours d'initiation à la boxe en groupe à Toulouse par CY Coaching">
                   
-                  <img id="column-image-boxe-mobile" src="../static/assets/img/boxe-profil.jpg" alt="Cours d'initiation à la boxe en groupe">
+                  <img id="column-image-boxe-mobile" src="../static/assets/img/boxe-profil.jpg" alt="Cours d'initiation à la boxe en groupe à Toulouse par CY Coaching">
                 </div>
                 <div class="right-column-boxe">
                   <div class="text-boxe-1 text">
@@ -88,13 +90,13 @@
             </div>
 
             <div class="image-solo-boxe">
-                <img class="image-solo-boxe" src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en solo">
+                <img class="image-solo-boxe" src="../static/assets/img/boxe-solo.jpg" alt="Cours d'initiation à la boxe en individuel à Toulouse par CY Coaching">
             </div>
             <a href="/contact" class="button"><span class="bold">Prêt(e) à mettre les gants ?</span></a>
         </section>
 
         <section>
-          <h2>Découvrir le self defense</h2>
+          <h2>Self-défense Féminine : Autonomie et Sécurité</h2>
           <div class="container-self-defense">
             <div class="left-column-self-defense">
               <div class="text-self-defense-1 text">
@@ -111,7 +113,7 @@
             </div>
             <div class="right-column-self-defense">
               <div class="image-self-defense">
-                <img src="../static/assets/img/self-defense-coaching.jpg" alt="Cours d'initiation au self defense">
+                <img src="../static/assets/img/self-defense-coaching.jpg" alt="Cours d'initiation au self defense féminin à Toulouse par CY Coaching">
               </div>
             </div>
           </div>
@@ -129,7 +131,7 @@
           </div>
           <div class="footer-logo">
             <a href="/">
-              <img src="../static/assets/img/logo-cycoaching.png" alt="logo"/>
+              <img src="../static/assets/img/logo-cycoaching.png" alt="Logo de CY Coaching, coach sportif à Toulouse"/>
             </a>
           </div>
           <div class="footer-social">
