Change tone for boxing page.

--- a/boxe/index.html
+++ b/boxe/index.html
@@ -76,16 +76,16 @@
                 </div>
                 <div class="right-column-boxe">
                   <div class="text-boxe-1 text">
-                    <p>Tu as envie de découvrir une nouvelle discipline qui te permette de te défouler, <span class="bold">d'évacuer ton stress et de bosser ton cardio ?</p>
+                    <p>Vous avez envie de découvrir une nouvelle discipline qui vous permette de vous défouler, <span class="bold">d'évacuer votre stress et de bosser votre cardio ?</p>
                   </div>
                   <div class="text-boxe-2-web text">
-                    <p>Alors j'ai ce qu'il te faut, je propose des cours de boxe pour débutant dans le but de te transmettre ma passion pour ce sport.</p>
-                    <p>Mais également pour que tu puisses évacuer tout tes tracas du quotidien à travers une discipline incroyable.</p>
+                    <p>Alors j'ai ce qu'il vous faut, je propose des cours de boxe pour débutant dans le but de vous transmettre ma passion pour ce sport.</p>
+                    <p>Mais également pour que vous puissiez évacuer tout vos tracas du quotidien à travers une discipline incroyable.</p>
                   </div>                
                 </div>
                 <div class="container-text-boxe-2-mobile text">
-                  <p>Alors j'ai ce qu'il te faut, je propose des cours de boxe pour débutant dans le but de te transmettre ma passion pour ce sport.</p>
-                  <p>Mais également pour que tu puisses évacuer tout tes tracas du quotidien à travers une discipline incroyable.</p>
+                  <p>Alors j'ai ce qu'il vous faut, je propose des cours de boxe pour débutant dans le but de vous transmettre ma passion pour ce sport.</p>
+                  <p>Mais également pour que vous puissiez évacuer tout tes tracas du quotidien à travers une discipline incroyable.</p>
                 </div>
             </div>
 
@@ -100,15 +100,15 @@
           <div class="container-self-defense">
             <div class="left-column-self-defense">
               <div class="text-self-defense-1 text">
-                <p>Tu souhaites apprendre les rudiments d'un <span class="bold">self défense simple et efficace</span> afin d'optimiser ta sécurité ?</p>
+                <p>Vous souhaitez apprendre les rudiments d'un <span class="bold">self défense simple et efficace</span> afin d'optimiser votre sécurité ?</p>
               </div>
               <div class="text-self-defense-2-web text">
-                <p>Alors ne cherche pas plus loin, on abordera ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
+                <p>Alors ne cherchez pas plus loin, nous aborderons ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
                 <p>Ces bases complétées d'un panel technique développé durant les séances seront éprouvées lors de mises en situation.</p>
               </div>
             </div>
             <div class="container-text-self-defense-2-mobile text">
-              <p>Alors ne cherche pas plus loin, on abordera ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
+              <p>Alors ne cherchez pas plus loin, nous aborderons ensemble les notions de <span class="bold">prévention, de protection et de détermination</span>.</p>
               <p>Ces bases complétées d'un panel technique développé durant les séances seront éprouvées lors de mises en situation.</p>
             </div>
             <div class="right-column-self-defense">
