Change tone on meta description.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="google-site-verification" content="2e-dng-aEgJQTSL9YHtp8MUy6QAuoLQWo_Sr2Pi7O9U" />
     <meta name="google-site-verification" content="axNHi-ia-aE4hMC6dBmpl5XFHlS8tkHWtJpTVBaeEOU" />
 
-    <meta name="description" content="Découvre CY Coaching, le coach sportif idéal sur Toulouse pour atteindre tes objectifs
-    de forme physique. Que tu souhaites gagner en masse musculaire, te remettre en forme, découvrir la boxe
-    pieds/poings, ou apprendre la self-défense féminine, je te fournirai un encadrement sur mesure. Profite d'un
-    apprentissage technique dans la bonne humeur et bénéficie d'un coaching personnalisé à l'écoute de tes besoins.">
+    <meta name="description" content="Découvrez CY Coaching, le coach sportif idéal sur Toulouse pour atteindre vos objectifs
+    de forme physique. Que vous souhaitiez gagner en masse musculaire, vous remettre en forme, découvrir la boxe
+    pieds/poings, ou apprendre la self-défense féminine, je vous fournirai un encadrement sur mesure. Profitez d'un
+    apprentissage technique dans la bonne humeur et bénéficiez d'un coaching personnalisé à l'écoute de vos besoins.">
 
     <link rel="icon" href="static/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/assets/css/common-style.css"/>
