Update plan offers.

--- a/tarif/index.html
+++ b/tarif/index.html
@@ -125,17 +125,17 @@
             <img src="../static/assets/img/programme.jpg" alt="Séance de coaching en groupe où le coach montre comment exécuter les exercices">
           </div>
           <div class="column">
-            <p>Je propose aussi deux offres de programmes à distance, basique ou personnaliśe. </br> Chaque offre comprend un programme sur 8 semaines. </p>
+            <p>Je propose aussi des offres de programmes à distance.</p>
             <div class="card">
               <div class="card-header">
                 <h3>Tarifs des programmes à distance</h3>
               </div>
               <div class="card-content">
-                <p><span class="bold">Programme basique</span> seul (de 8 semaines) : <span class="bold">69€</span></p>
+                <p><span class="bold">Programme découverte</span> avec une programmation générique permettant de découvrir les bases de l'entraînement : <span class="bold">40€/mois</span></p>
                 <hr class="separator">
-                <p><span class="bold">Programme basique</span> seul (de 8 semaines) + 1 séance de présentation + tests : <span class="bold">99€</span></p>
+                <p><span class="bold">Programme débutant</span> pour booster ta progression avec un programme personnalisé et des retours vidéos chaque semaine : <span class="bold">80€/mois</span></p>
                 <hr class="separator">
-                <p><span class="bold">Programme personnalisé</span> comprenant un programme de 8 semaines, 1 séance encadrée, tests et analyse vidéo des mouvements : <span class="bold">149€</p>
+                <p><span class="bold">Programme confirmé</span> pour développer ton plein potentiel avec un programme personnalisé, des analyses vidéos chaque semaine, un plan alimentaire détaillé et des retours 7j/7 : <span class="bold">120€/mois</p>
               </div>
             </div>
           </div>
