--- a/tarif/index.html
+++ b/tarif/index.html
@@ -80,7 +80,7 @@
                 <hr class="separator">
                 <p>Carnet de 10 séances : <span class="bold">550€</span></p>
                 <hr class="separator">
-                <p>Carnet de 20 séances + 1 accessoire fitness : <span class="bold">1000€</p>
+                <p>Carnet de 20 séances + 1 accessoire fitness : <span class="bold">1000€ (50€ par séance)</p>
               </div>
             </div>
           </div>
